name:                broker
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Marc Juchli
maintainer:          mail@marcjuch.li
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


library
  hs-source-dirs:   src
  build-depends:
    base >= 4.6 && <= 5.0,
    bytestring >= 0.10 && < 0.11,
    binary >=0.6 && <0.8,
    network >= 2.4,
    directory >= 1.2,
    cond >= 0.4, 
    digest >= 0.0.1.2,
    kafka-protocol -any,
    mtl -any,
    mmap -any,
    async -any,
    resourcet -any
executable broker
  main-is:             HMB/Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       
    base >=4.6 && <5.0,
    binary >=0.6 && <0.8,
    bytestring >=0.10 && <0.11,
    network >= 2.6,
    async -any,
    cond >= 0.4,
    directory >= 1.2,
    digest >= 0.0.1.2,
    kafka-protocol -any,
    mtl -any,
    mmap -any,
    cereal -any,
    resourcet -any
  hs-source-dirs:      src
  default-language:    Haskell2010

executable performance-producer
  main-is: producer/Main.hs
  build-depends:       
    base >=4.6 && <5.0,
    bytestring >=0.10 && <0.11,
    network >= 2.6,
    kafka-protocol -any,
    broker -any,
    iproute >= 1.3,
    cereal -any,
    entropy -any
  hs-source-dirs:      benchmark
  default-language:    Haskell2010
